@@ -3,4 +3,5 @@
 - Added: Max_camp_cnt_method mission parameter by longtimegamer
 - Changed: Make use of new triggerinterval stuff to run scripts at a specific time 
 - Changed: Added setTriggerinterval as new parameter to createTrigger and createTriggerLocal functions (by alexvladn)
+- Changed: Teamkillers are no longer pushed to the server lobby (slot selection) but they now can listen to a song in jail (something with bananas :))
 - Fixed: Added missing light attack chopper for independent side
